fixed bug on mobile blocker, css

--- a/src/style.css
+++ b/src/style.css
@@ -125,19 +125,17 @@ display: block;
 } 
 
 @media (max-width: 1024px) {
-    #mobile-blocker {
+    #ui-overlay #mobile-blocker {
+        display: flex; /* Use flexbox */
         z-index: 2; 
-        display: block;
         position: absolute; 
         width: 100vw; 
         height: 100vh; 
         background-color: black; 
         color: white; 
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         font-family: Helvetica, Arial, Helvetica, sans-serif;
+        justify-content: center; /* Center horizontally */
+        align-items: center; /* Center vertically */
     }
 
     #blocker, #experience
